# WorldNewsSwiftUIApp/Resources/openapi.yaml
@@ -11,6 +11,7 @@ servers:
   - url: https://newsapi.org/v2
     description: "NEWS API"
 
+
 paths:
   /everything:
     get:
@@ -142,6 +143,13 @@ paths:
         - name: withDelay
           in: query
           description: Set a delay before sending the request (3 seconds).
+          required: false
+          schema:
+            type: boolean
+            example: false
+        - name: savedb
+          in: query
+          description: Data will be saved to db
           required: false
           schema:
             type: boolean
